Working 	Facebook login for existing users 	Generate session parameters and csrf token 	Send to main activity 	Maintain facebook login 	Register new user with hrc Not working 	New user need to login once registered 	Session parameters lost in mainactivity...minor error somewhere 	Need progress dialog bar and must redesign it later for ux 	Post request in list fragments need to be updated with added data

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_guide">Guide</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="title_activity_search">Search</string>
+    <string name="app_id">1468588956722105</string>
 
 </resources>
